# python-cdk-boilerplate

./: .gitignore  Dockerfile  README.md  app.py  cdk.json  docker-compose.yml  pyproject.toml
docker/aws/: Dockerfile
docker/local/: Dockerfile
python_cdk_boilerplate/: python_cdk_boilerplate_stack.py
src/: main.py
tests/unit/: test_python_cdk_boilerplate_stack.py
